--- a/assessment.html
+++ b/assessment.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>あなたのYukiが作ったあなたのいいところ診断</title>
-    <link rel="stylesheet" href="assesment.css">
+    <link rel="stylesheet" href="assessment.css">
 </head>
 <body>
     <h1>あなたのいいところは？</h1>
@@ -14,6 +14,6 @@
     <button id="assesment">診断する</button>
     <div id="result-area"></div>
     <div id="tweet-area"></div>
-    <script src="assesment.js"></script>
+    <script src="assessment.js"></script>
 </body>
 </html>
